# GraPra

./: README.md
bbm-a1/: .gitignore  CMakeLists.txt  CMakeSettings.json
bbm-a1/applications/: CMakeLists.txt
bbm-a1/applications/bbm-a1/: CMakeLists.txt  clientside-networking.cpp  clientside-networking.h  dynamic-objects.cpp  dynamic-objects.h  main.cpp  particles.cpp  particles.h  rendering.cpp  rendering.h  static-objects.cpp  static-objects.h
bbm-a1/applications/bbm-a1/shader/: box.fs  copytex-depth.fs  floor.fs  particle-flare.fs  particle-flare.vs  pos+norm+tc.fs  pos+norm.fs  pos+norm.vs  sky.vs
bbm-a1/applications/bbm-server/: CMakeLists.txt  gamelogic.cpp  loop_server.bat  loop_server.sh  server-cmdline.h  server-main.cpp
bbm-a1/common/cppgl/src/: texture.cpp
bbm-a1/common/cppgl/submodules/assimp/: CMakeLists.txt
bbm-a1/common/cppgl/submodules/assimp/code/: CMakeLists.txt
